any() and all() now return early if possible
The implementation now avoids checking every element of the input if the
result is already determined.

git-svn-id: https://svn.r-project.org/R/trunk@51298 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -319,6 +319,9 @@ NEW FEATURES
 	FALSE resulting in a 10x speedup.  Thanks to Patrick Aboyoun
 	for implementation suggestions.
 
+    o	any() and all() return early if possible speeding up results
+	when operating on long vectors.
+
 
 DEPRECATED & DEFUNCT
 
