use encoded form for text help if representable
git-svn-id: https://svn.r-project.org/R/trunk@51302 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -322,6 +322,9 @@ NEW FEATURES
     o	any() and all() return early if possible speeding up results
 	when operating on long vectors.
 
+    o	Help conversion to text now uses the first part of a \enc{}{}
+	if it is representable in the current output encoding.
+
 
 DEPRECATED & DEFUNCT
 
