any() and all() now return early if possible (try #2)
The implementation now avoids checking every element of the input if the
result is already determined.  Regression tests are more complete and
easier to read.

git-svn-id: https://svn.r-project.org/R/trunk@51319 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -328,6 +328,9 @@ NEW FEATURES
         the methods in a methods table, to replace the deprecated
         class "MethodsList".
 
+    o	any() and all() return early if possible.  This speeds up results
+	when operating on long vectors.
+
 
 DEPRECATED & DEFUNCT
 
