Typos and markup.
git-svn-id: https://svn.r-project.org/R/trunk@51322 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-lang.texi
+++ b/doc/manual/R-lang.texi
@@ -738,7 +738,7 @@ printing arrays.
 @node Classes, Time series attributes, Dimnames, Attributes
 @subsection Classes
 
-@R{} has an elaborate class system@footnote{actally two, but this draft
+@R{} has an elaborate class system@footnote{actually two, but this draft
 manual predates the @pkg{methods} package.}, principally controlled via
 the @code{class} attribute.  This attribute is a character vector
 containing the list of classes that an object inherits from.  This forms
